# genericorp-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
genericorp/about-gc/: company-bio.md  company-jingle.md  company-milestones.md  company-slogans.md  key-events.md  key-figures.md
genericorp/employee-handbook/: benefits-and-compensation.md  code-of-conduct.md  communication-guidelines.md  company-culture.md  confidentiality-agreements.md  diversity-and-inclusion.md  employee-resources.md  employee-wellness-programs.md  ethics-and-compliance.md  grievance-procedures.md  harassment-and-discrimination-policies.md  intellectual-property.md  leave-policies.md  performance-reviews.md  recognition-programs.md  remote-work-policies.md  team-building-activities.md  training-and-development.md  travel-policies.md  work-life-balance.md  workplace-safety.md
genericorp/internal-tools/CircuitForge/: ai_diagnostics_integration.md  case_studies_on_failure_predictions.md  circuit_design_guidelines.md  circuit_schematic_examples.md  debugging_techniques.md  design_best_practices.md  feedback_and_issues_log.md  firmware_update_protocols.md  hardware_component_library.md  performance_metrics_analysis.md  regulatory_compliance_checklist.md  simulation_test_cases.md  troubleshooting_guide.md  user_manual.md  version_control_and_collaboration.md
notebooks/employee-handbook/: employee-handbook.ipynb  handbook_topics.json
notebooks/hf-dataset/: hf-dataset.ipynb
notebooks/internal-tools/: genericorp_internal_tools.json  internal-tools-rag-qa.ipynb  internal-tools.ipynb
(+236 files in other folders)
