[project]
name = "genericorp-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.18",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.8",
    "litellm>=1.63.7",
    "matplotlib>=3.10.1",
    "mlx>=0.25.0",
    "mlx-lm>=0.23.0",
    "numpy>=2.2.4",
    "openai>=1.61.0",
    "pandas>=2.2.3",
    "polars>=1.27.1",
]
